fix: export canonical tool names with per-agent MCP prefix
Cross-agent history export wrote each tool_use block's name from the
display title (bare, unprefixed) instead of the canonical tool name with
the target client's MCP namespace. After switching agents, the model was
primed by these bare names and emitted tool calls the client rejected
with "No such tool available: read_file".

Add shared helpers to ExportUtils (canonicalToolName, isAgentBridgeTool,
exportMcpToolName) plus CLAUDE_MCP_PREFIX / ACP_MCP_PREFIX constants.
Thread an mcpPrefix through AnthropicClientExporter so Claude (--resume)
emits mcp__agentbridge__<tool> and generic ACP clients (Junie) emit
agentbridge-<tool>. CodexClientExporter now uses the canonical name
instead of the title.

pluginTool is persisted and restored in v2 JSON (backfilled from title
for mcpHandled entries), so the canonical name is reliably available at
export time. Native source-agent tools are gated out of prefixing via
isAgentBridgeTool and exported unprefixed.

Copilot/Kiro/OpenCode exporters share the same latent bug but are left
as a follow-up pending on-disk tool-name format verification.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>